# MyUtils

./: .gitignore  CMAKE.md  CMakeLists.txt  MODULES.md  MyUtilsConfig.cmake.in  README.md  main.c
demos/: main.c
include/MyUtils/: error.h  font32.h  list.h  macro_magics.h
include/MyUtils/win32/: font.h
src/: error.c  font32.c  list.c
src/win32/: font.c
